--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,41 @@
 <resources>
     <string name="app_name">Check-Mate</string>
+    <string name="kashur">connected to:</string>
+    <string name="join_the_event">Join the Event</string>
+    <string name="would_you_like_to_join">would you like to join:</string>
+    <string name="how_are_you_connected">how are you connected?</string>
+    <string name="bride_s_friend">Bride\'s friend...</string>
+    <string name="event_warning">please note that you can only join one event. so you will be removed from previous events!</string>
+    <string name="cancel">cancel</string>
+    <string name="join">join</string>
+    <string name="add_event">Add Event</string>
+    <string name="event_name">Event name</string>
+    <string name="please_don_t_add_unnecessary_events">please don\'t add unnecessary events!</string>
+    <string name="add_your_event">Add your Event</string>
+    <string name="your_location_is_loading">Your location is loading...</string>
+    <string name="my_name">My name</string>
+    <string name="female">Female</string>
+    <string name="get_started">Get Started</string>
+    <string name="male">Male</string>
+    <string name="update">update</string>
+    <string name="must_enter_name">must enter your name!</string>
+    <string name="must_enter_age">must enter age!</string>
+    <string name="must_enter_gender">you didn\'t enter your gender! you haft to be something!</string>
+    <string name="must_enter_image">don\'t be shy and upload a picture!</string>
+    <string name="invalid_input">Invalid input!</string>
+    <string name="take_photo">Take Photo</string>
+    <string name="choose_from_library">Choose from Library</string>
+    <string name="add_photo">Add Photo!</string>
+    <string name="select_file">Select File</string>
+    <string name="exit_check_mate">Exit Check Mate</string>
+    <string name="are_you_sure_you_want_to_leave">are you sure u want to leave?</string>
+    <string name="exit">exit</string>
+    <string name="removed_from_favorites">was removed from your favorites!</string>
+    <string name="from_favorites">from favorites?</string>
+    <string name="are_you_sure_you_want_to_remove">are you sure u want to remove</string>
+    <string name="delete">delete</string>
+    <string name="delete_from_favorites">Delete from favorites</string>
+    <string name="update_profile">Update profile</string>
+    <string name="dont_leave_name_empty">can\'t leave event name empty!</string>
+    <string name="cant_leave_field_empty">can\'t leave field empty!</string>
 </resources>
