--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="exit_event">Exit Event</string>
     <string name="click_on_the_image_to_change_it">click on the image to change it</string>
     <string name="click_the_camera_icon_to_select_an_image">click the camera icon to select an image</string>
+    <string name="there_are_no_events_in_your_location">there are no events in your location</string>
 </resources>
